Fix content and layout issues

--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -38,3 +38,9 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
+
+img {
+	border-radius: var(--border-radius);
+	box-shadow: 0px 2px 5px var(--color-neutral);
+	width: 100%;
+}
